--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             + "\t3. Çevrim içi ders işlenmesini hibritleştirebiliriz. Yani normal ders anlatımı videolar aracılığı ile olup ders verme yükü hocalarımızın üzerinden alınırken sadece recitation’lar veya office hour’lar çevrim içi olarak verilebilir.\n"
                             + "\t4. Yüz yüze sınavlar için yeterli gözetmen olmaması halinde sınava girecek kişiler için oturum paylaştırılması yapılabilir. Örneğin bir günde bir oturumda biteceğine bir günde iki oturumda bitirilebilir. Gerekirse sınav tarihi de güz dönemi ders seçimlerinin öncesindeki aya ertelenebilir.\n"
                             + "\t5. Sonuçların ilanının gecikmesi önemli değil. Güz dönemi ders kayıtları başlamadan önce ne kadar geç olursa olsun herhangi bir tarihte ilan edilmesi yeterli. Hocalarımıza uygun tarihlerde kağıtların okunması herkesin yararına olacaktır.\n\n"
-                            + "Kısacası sadece YouTube’daki veya Zoom’daki kayıtları kullanmanıza ve sınavın bir şekilde yapılmasıyla hocalarımızın üzerine yük bindirmeden 120 alabilmek istiyoruz. Öğrenci olduğumuz ve sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız ve bu dersi almak istiyoruz. Bu konudaki düşüncelerinizi bekliyoruz.  İlginiz için teşekkür ederiz. İlginiz için teşekkür ederiz.\n\n"
+                            + "Kısacası sadece YouTube’daki veya Zoom’daki kayıtları kullanarak ve sınavın bir şekilde yapılmasıyla hocalarımızın üzerine yük bindirmeden 120 alabilmek istiyoruz. Bu dersi almak istiyoruz ve öğrenci olduğumuz ve sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız. Bu konudaki düşüncelerinizi bekliyoruz. İlginiz için teşekkür ederiz.\n\n"
                             + "Sevgilerle.\n\n"
                             + "MATH120 Öğrencileri";
 
@@ -52,9 +52,9 @@
                             + "İlgili durumu Matematik Bölümü Öğretim Görevlileri ile görüşmeye çalışıyoruz. Açılmayacağını dile getirdikleri için alternatif çözüm yolları öneriyoruz. Bölüm hocalarına:\n\n"
                             + "\t1. Ders işlenmesine gerek kalmadan sadece sınav yapılması, halihazırdaki ders videoları ve ders notlarının kullanılması ile bölüm hocalarının üzerinden ders verme yükünün alınması,\n"
                             + "\t2. Ders verme zorunluluğu varsa bunun Zoom üzerinden çevrim içi yapılması,\n"
-                            + "\t3. Hatta gerekirse hibrit bir şekilde derslerin sadece videolardan ilerlemesi, sadece recitation ve office hour’ların Zoom üzerinden ilerlemesi,\n"
+                            + "\t3. Hatta gerekirse hibrit bir şekilde derslerin videolardan ilerlemesinin yanında sadece recitation ve office hour’ların Zoom üzerinden ilerlemesi,\n"
                             + "\t4. Çoğu hocanın şehir dışında olduğu göz önünde bulundurularak Güz Dönemi başlangıcının belli bir süre öncesine kadar sınav tarihlerinin ertelenebileceği veya sınavlar yapıldıktan sonra sonuçların okunmasında hocaların üzerindeki yükü azaltmak için ertelenebileceği önerilerimizi ilettik.\n\n"
-                            + "Öğrenci olduğumuz ve sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız ve bu dersi almak istiyoruz. Bize yardımcı olmanızı rica ediyoruz. İlginiz için teşekkür ederiz.\n\n"
+                            + "Bu dersi almak istiyoruz ve öğrenci olduğumuz ve sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız. Bize yardımcı olmanızı rica ediyoruz. İlginiz için teşekkür ederiz.\n\n"
                             + "Saygılarımızla.\n\n"
                             + "MATH120 Öğrencileri";
 
