--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             + "\t2. Ders verme zorunluluğu varsa bunun Zoom üzerinden çevrim içi yapılması,\n"
                             + "\t3. Hatta gerekirse hibrit bir şekilde derslerin videolardan ilerlemesinin yanında sadece recitation ve office hour’ların Zoom üzerinden ilerlemesi,\n"
                             + "\t4. Çoğu hocanın şehir dışında olduğu göz önünde bulundurularak Güz Dönemi başlangıcının belli bir süre öncesine kadar sınav tarihlerinin ertelenebileceği veya sınavlar yapıldıktan sonra sonuçların okunmasında hocaların üzerindeki yükü azaltmak için ertelenebileceği önerilerimizi ilettik.\n\n"
-                            + "Bu dersi almak istiyoruz ve öğrenci olduğumuz ve sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız. Bize yardımcı olmanızı rica ediyoruz. İlginiz için teşekkür ederiz.\n\n"
+                            + "Bu dersi almak istiyoruz ve öğrenci olduğumuz için sistemin işleyişi konusunda bilgi eksikliğimizden dolayı yukarıdaki çözümlerin çoğunun uygulanamayacağı ihtimalinin farkındayız. Bize yardımcı olmanızı rica ediyoruz. İlginiz için teşekkür ederiz.\n\n"
                             + "Saygılarımızla.\n\n"
                             + "MATH120 Öğrencileri";
 
