--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                 <p>MATH120 için iki adet e-posta atacağız. Biri bölüm hocalarına öneriler sunan bir e-posta, diğeri de sunduğumuz önerileri de belirten dekanlığa bilgilendirme e-postası olacak.</p>
                 <p>E-posta atmak için aşağıdaki butonları kullanabilirsiniz. Lütfen göndermeden "Kişiler" ve "CC(Karbon Kopya)" kısımlarınızda çıkan yerleri kontrol edin. Kontrollerinizi bitirmeden yollamayın.</p>
                 <p>ODTÜ e-postanızı uygulamanıza bağlamadıysanız manuel bir şekilde e-posta atmak istiyorsanız e-posta içerikleri ile <a href="https://docs.google.com/document/d/1BAyBlalGy_r9Vs3DBHZrAyGRW4Nnhrds23f32UdbuKY/edit?usp=sharing" target="_blank">ilgili dosya için tıklayın.</a></p>
-                <p>ODTÜ e-postanızı uygulamalarınıza bağlamak istiyorsanız:</p>
-                <ul>
-                    <li><a href="https://faq.cc.metu.edu.tr/tr/sss/android-yuklu-cihazimla-odtu-e-posta-servisini-nasil-kullanabilirim">Android'e Bağlama Rehberi</a></li>
-                    <li><a href="https://faq.cc.metu.edu.tr/tr/sss/iphone-ya-da-ipad-ile-odtu-e-posta-servisini-nasil-kullanabilirim">iPhone veya iPad'e Bağlama Rehberi</a></li>
-                    <li><a href="https://faq.cc.metu.edu.tr/tr/sss/windows-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">Windows Mail'e Bağlama Rehberi</a></li>
-                    <li><a href="https://faq.cc.metu.edu.tr/tr/sss/apple-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">(Mac'ler için) Apple Mail'e Bağlama Rehberi</a></li>
-                </ul>
+                <p>ODTÜ e-postanızı uygulamalarınıza bağlamak istiyorsanız:
+                    <ul>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/android-yuklu-cihazimla-odtu-e-posta-servisini-nasil-kullanabilirim">Android'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/iphone-ya-da-ipad-ile-odtu-e-posta-servisini-nasil-kullanabilirim">iPhone veya iPad'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/windows-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">Windows Mail'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/apple-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">(Mac'ler için) Apple Mail'e Bağlama Rehberi</a></li>
+                    </ul>
+                </p>
                 <button class="button" onclick="openEmail()">Bölüm Hocalarına Atılacak E-posta</button>
                 <button class="button" onclick="openEmail2()">Dekanlığa Atılacak E-posta</button>
 
