--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <p>ODTÜ e-postanızı uygulamanıza bağlamadıysanız manuel bir şekilde e-posta atmak istiyorsanız e-posta içerikleri ile <a href="https://docs.google.com/document/d/1BAyBlalGy_r9Vs3DBHZrAyGRW4Nnhrds23f32UdbuKY/edit?usp=sharing" target="_blank">ilgili dosya için tıklayın.</a></p>
                 <p>ODTÜ e-postanızı uygulamalarınıza bağlamak istiyorsanız:
                     <ul>
-                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/android-yuklu-cihazimla-odtu-e-posta-servisini-nasil-kullanabilirim">Android'e Bağlama Rehberi</a></li>
-                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/iphone-ya-da-ipad-ile-odtu-e-posta-servisini-nasil-kullanabilirim">iPhone veya iPad'e Bağlama Rehberi</a></li>
-                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/windows-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">Windows Mail'e Bağlama Rehberi</a></li>
-                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/apple-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim">(Mac'ler için) Apple Mail'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/android-yuklu-cihazimla-odtu-e-posta-servisini-nasil-kullanabilirim" target="_blank">Android'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/iphone-ya-da-ipad-ile-odtu-e-posta-servisini-nasil-kullanabilirim" target="_blank">iPhone veya iPad'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/windows-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim" target="_blank">Windows Mail'e Bağlama Rehberi</a></li>
+                        <li><a href="https://faq.cc.metu.edu.tr/tr/sss/apple-mail-ile-odtu-e-posta-servisini-nasil-kullanabilirim" target="_blank">(Mac'ler için) Apple Mail'e Bağlama Rehberi</a></li>
                     </ul>
                 </p>
                 <button class="button" onclick="openEmail()">Bölüm Hocalarına Atılacak E-posta</button>
