--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <section>
-                <p>MATH120 için iki adet e-posta atacağız. Biri bölüm hocalarına öneriler sunan bir e-posta, diğeri de sunduğumuz önerileri de belirten dekanlığa bilgilendirme e-postası olacak.</p>
+                <p>MATH120 için iki adet e-posta atacağız. Biri bölüm hocalarına öneriler sunan, diğeri de sunduğumuz önerileri barındıran dekanlığa bilgilendirme e-postası olacak.</p>
                 <p>E-posta atmak için aşağıdaki butonları kullanabilirsiniz. Lütfen göndermeden "Kişiler" ve "CC(Karbon Kopya)" kısımlarınızda çıkan yerleri kontrol edin. Kontrollerinizi bitirmeden yollamayın.</p>
                 <p>ODTÜ e-postanızı uygulamanıza bağlamadıysanız manuel bir şekilde e-posta atmak istiyorsanız e-posta içerikleri ile <a href="https://docs.google.com/document/d/1BAyBlalGy_r9Vs3DBHZrAyGRW4Nnhrds23f32UdbuKY/edit?usp=sharing" target="_blank">ilgili dosya için tıklayın.</a></p>
                 <p>ODTÜ e-postanızı uygulamalarınıza bağlamak istiyorsanız:
