--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <section>
                 <p>MATH120 için iki adet e-posta atacağız. Biri bölüm hocalarına öneriler sunan, diğeri de sunduğumuz önerileri barındıran dekanlığa bilgilendirme e-postası olacak.</p>
                 <p>E-posta atmak için aşağıdaki butonları kullanabilirsiniz. Lütfen göndermeden "Kişiler" ve "CC(Karbon Kopya)" kısımlarınızda çıkan yerleri kontrol edin. Kontrollerinizi bitirmeden yollamayın.</p>
-                <p>ODTÜ e-postanızı uygulamanıza bağlamadıysanız manuel bir şekilde e-posta atmak istiyorsanız e-posta içerikleri ile <a href="https://docs.google.com/document/d/1BAyBlalGy_r9Vs3DBHZrAyGRW4Nnhrds23f32UdbuKY/edit?usp=sharing" target="_blank">ilgili dosya için tıklayın.</a></p>
+                <p>ODTÜ e-postanızı uygulamanıza bağlamadıysanız manuel bir şekilde e-posta atmak için <a href="https://docs.google.com/document/d/1BAyBlalGy_r9Vs3DBHZrAyGRW4Nnhrds23f32UdbuKY/edit?usp=sharing" target="_blank">buradan ilgili dosyaya ulaşabilirsiniz.</a></p>
                 <p>ODTÜ e-postanızı uygulamalarınıza bağlamak istiyorsanız:
                     <ul>
                         <li><a href="https://faq.cc.metu.edu.tr/tr/sss/android-yuklu-cihazimla-odtu-e-posta-servisini-nasil-kullanabilirim" target="_blank">Android'e Bağlama Rehberi</a></li>
