--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         window.location.href = mailtoLink;
                     }
                     function openEmail2() {
-                        var to2 = "tastuner@metu.edu.tr; muhid@metu.edu.tr; wwwma120@metu.edu.tr";
+                        var to2 = "ozpineci@metu.edu.tr; sbagce@metu.edu.tr; tyanik@metu.edu.tr; atesf@metu.edu.tr";
                         var cc2 = "";
                         var subject2 = "MATH120 Yaz Okulu Hk.";
                         var body2 = "Fen Edebiyat Fakültesi dekanlığına;\n\n"
